attempt to get proguard working (fail)