@@ -12,6 +12,9 @@ object MandelbrotServerBuild extends Build {
   val esperVersion = "4.11.0"
   val slickVersion = "2.0.1"
 
+  ProguardKeys.options in Proguard ++= Seq("-dontnote", "-dontwarn", "-ignorewarnings")
+  //ProguardKeys.options in Proguard += ProguardOptions.keepMain("some.MainClass")
+
   lazy val mandelbrotBuild = Project(
     id = "mandelbrot-server",
     base = file("."),
@@ -21,6 +24,7 @@ object MandelbrotServerBuild extends Build {
       version := mandelbrotVersion,
       scalaVersion := "2.10.4",
       javacOptions ++= Seq("-source", "1.7"),
+
       libraryDependencies ++= Seq(
         "com.typesafe.akka" %% "akka-actor" % akkaVersion,
         "com.typesafe.akka" %% "akka-persistence-experimental" % akkaVersion,
@@ -35,22 +39,31 @@ object MandelbrotServerBuild extends Build {
         "org.apache.lucene" % "lucene-analyzers-common" % luceneVersion,
         "org.apache.lucene" % "lucene-memory" % luceneVersion,
         "org.apache.lucene" % "lucene-queryparser" % luceneVersion,
-        "com.espertech" % "esper" % esperVersion,
+//        "com.espertech" % "esper" % esperVersion,
         "com.typesafe.slick" %% "slick" % slickVersion,
         "com.h2database" % "h2" % "1.4.177",
-        "com.escalatesoft.subcut" %% "subcut" % "2.0",
+//        "com.escalatesoft.subcut" %% "subcut" % "2.0",
         "joda-time" % "joda-time" % "2.2",
         "org.joda" % "joda-convert" % "1.3.1",
         "nl.grons" %% "metrics-scala" % "3.0.5_a2.3",
         "org.slf4j" % "slf4j-api" % "1.7.5",
-        //"org.slf4j" % "slf4j-log4j12" % "1.7.5",
         "ch.qos.logback" % "logback-classic" % "1.1.2",
         "org.scalatest" %% "scalatest" % "1.9.1" % "test",
         "com.typesafe.akka" %% "akka-testkit" % akkaVersion % "test",
         "io.spray" % "spray-testkit" % sprayVersion % "test"
       ),
-      javaOptions in test += "-Dlog4j.configuration=src/test/resources/log4j.properties",
-      fork := true  // for akka-persistence leveldb plugin
+
+      fork := true, // for akka-persistence leveldb plugin
+      //fork in (Test,run) := true,
+
+      // tweaks for proguard
+      javaOptions ++= Seq("-Xmx8192M",
+                          "-XX:+UseConcMarkSweepGC",
+                          "-XX:+CMSClassUnloadingEnabled",
+                          "-XX:PermSize=512M",
+                          "-XX:MaxPermSize=2048M",
+                          "-XX:-UseGCOverheadLimit")
+
     ) ++ proguardSettings
   )
 }
